--- a/index.html
+++ b/index.html
@@ -6,19 +6,12 @@
   </head>
   <body>
     <div class="input-area">
-      <input placeholder="TODOを入力" />
+      <input id="add-text" placeholder="TODOを入力" />
       <button id="add-button">追加</button>
     </div>
     <div class="incomplete-area">
       <p class="title">未完了のTODO</p>
-      <ul>
-        <li>
-          <div class="list-row">
-            <p class="todo-item">TODOです</p>
-            <button>完了</button>
-            <button>削除</button>
-          </div>
-        </li>
+      <ul id = "incomplete-list">
         <li>
           <div class="list-row">
             <p class="todo-item">TODOです</p>
